--- a/home.html
+++ b/home.html
@@ -44,27 +44,17 @@
     </header>
     </div>       
     <main id ="main-content">
-        <!-- <span>World Travel Guide</span> -->
-        <!-- <input type="text" id ="search-bar" placeholder="Where would you like to go ?" /> -->
-        <div class="slideshow-container">
-            <div class="mySlides fade">
-                <img id ="img-logo" src="images/cb_tokyo_sakura_istock.jpg" alt ="logo" class="img-slide">
-            </div>
-            
-            <div class="mySlides fade">
-              <img src="images/blonde-girl.webp" alt="picture2" class="img-slide">
-            </div>
-            
-            <div class="mySlides fade">
-              <img src="images/california_bridge.jpg" alt="picture3" class="img-slide">
-            </div>           
-        </div>
+        <section id ="search">
+                <!-- <span>World Travel Guide</span> -->
+                <input type="text" id ="search-bar" placeholder="Where would you like to go ?" />
+        </section>
         <p>
                 The World Travel Guide (WTG) is the flagship digital consumer brand within the Columbus Travel <br>Media portfolio.
                  Available in English, German, and Spanish versions, the WTG provides detailed and <br>accurate travel content designed to inspire global travellers. 
                  It covers all aspects, from cities to <br>airports, cruise ports to ski and beach resorts, attractions to events,
                  and it also includes offbeat <br>travel news, stories, quizzes and guides for adventurous travellers. 
-        </p>               
+        </p>
+        <img id ="img-logo" src="images/logo3.jpg" alt ="logo">
         <span id="span-travel" class="span-text">Travel Features</span>
        <div class="flexContainer">
             <div class ="features">   
